--- a/index.html
+++ b/index.html
@@ -9,10 +9,43 @@
 </head>
 <body>
     <div class="container">
-        <div class="top"><h1>DATA MAHASISWA</h1></div>
-        <div class="greetings"></div>
-        <div class="description"></div>
-        <div class="display"></div>
+        <div class="top">
+            <h1>DATA MAHASISWA</h1>
+        </div>
+        <div class="greetings row">
+            <div class="col-6">
+                <h1 id="loginName">Hello, </h1>
+            </div>
+            <div class="col-6 text-end">
+                <h1 id="time">asdf</h1>
+            </div>
+        </div>
+        <hr>
+        <div class="description">
+            <p>“Perfection is achieved not when there is nothing more to add, but rather when there is nothing more to take away.” – Antoine de Saint-Exupery</p>
+        </div>
+        <hr>
+        <div class="display row">
+            <div class="col-12">
+                <label>Show</label>
+                <input type="number" id="numEntries" value="10" step="5" min="5" max="20">
+                <label>Entries</label>
+            </div>
+            <div class="info col-12 fw-bold row">
+                <div class="col-2">
+                    <p>asdfasdf</p>
+                </div>
+                <div class="col-3">
+                    <p>asdfasdf</p>
+                </div>
+                <div class="col-5">
+                    <p>asdfasdf</p>
+                </div>
+                <div class="col-2">
+                    <p>asdfasdf</p>
+                </div>
+            </div>
+        </div>
         <div class="input"></div>
         <div class="bottom"></div>    
     </div>
